# M-GStream

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  README_ko.md
design_handoff_mgstream_ui/: M-GStream.html  README.md
docs/: M_GStream_branch_commit_rules_ko.md  M_GStream_code_flow_phase0_ko.md  M_GStream_code_flow_v1_ko.md  M_GStream_develop_ubuntu24_remote_browser_stream_followup_plan_ko.md  M_GStream_develop_ubuntu24_remote_browser_stream_ko.md  M_GStream_modification_log_ko.md  M_GStream_remote_browser_stream_known_issues_ko.md  M_GStream_remote_browser_stream_manual_checklist_ko.md  M_GStream_remote_browser_stream_verification_report_ko.md  M_GStream_remote_camera_contract_ko.md  M_GStream_remote_control_examples_ko.md  M_GStream_renderer_scene_review_notes_ko.md  M_GStream_ubuntu24_remote_browser_stream_prep_review_ko.md  M_GStream_ubuntu24_remote_browser_stream_user_guide_ko.md  M_GStream_ubuntu24_toolchain_status_ko.md  M_GStream_ubuntu_desktop_build_ko.md  M_GStream_vs_sibr_viewer_ko.md  M_GStream_windows_portable_bundle_ko.md  M_GStream_windows_portable_bundle_review_finding_response_ko.md  M_GStream_windows_portable_bundle_review_ko.md  develop_windows_portable_bundle_changes_ko.md  extended_gaussian_branch_commit_rules_ko.md  extended_gaussian_code_flow_phase0_ko.md  extended_gaussian_code_flow_v1_ko.md  extended_gaussian_develop_ubuntu24_remote_browser_stream_followup_plan_ko.md  extended_gaussian_develop_ubuntu24_remote_browser_stream_ko.md  extended_gaussian_modification_log_ko.md  extended_gaussian_remote_browser_stream_known_issues_ko.md  extended_gaussian_remote_browser_stream_manual_checklist_ko.md  extended_gaussian_remote_browser_stream_verification_report_ko.md  extended_gaussian_remote_camera_contract_ko.md  extended_gaussian_remote_control_examples_ko.md  extended_gaussian_renderer_scene_review_notes_ko.md  extended_gaussian_ubuntu24_remote_browser_stream_prep_review_ko.md  extended_gaussian_ubuntu24_remote_browser_stream_user_guide_ko.md  extended_gaussian_ubuntu24_toolchain_status_ko.md  extended_gaussian_ubuntu_desktop_build_ko.md  extended_gaussian_vs_sibr_viewer_ko.md  extended_gaussian_windows_portable_bundle_ko.md  extended_gaussian_windows_portable_bundle_review_finding_response_ko.md  (+2 more)
docs/source_diff_details_0b509d4_to_c6b82fd/: 02_server_headers.md  (+2 more)
plan/: 2026-04-08-ubuntu24-desktop-server.md  2026-04-08-ubuntu24-remote-browser-stream.md  2026-04-08-windows-portable-bundle-review-followups.md  2026-04-08-windows-portable-bundle.md
src/projects/M_GStream/: CMakeLists.txt
src/projects/M_GStream/apps/: CMakeLists.txt
src/projects/M_GStream/apps/M_GStreamViewer/: CMakeLists.txt  main.cpp
src/projects/M_GStream/renderer/: CMakeLists.txt  Config.hpp  ExtendedGaussianViewer.cpp  ExtendedGaussianViewer.hpp  MGStreamViewer.cpp  MGStreamViewer.hpp
src/projects/M_GStream/renderer/cuda/: TransformKernels.cuh
src/projects/M_GStream/renderer/resource/: AssetLoadWorker.hpp  GaussianField.hpp  GaussianLoader.cpp  GaussianLoader.hpp  GaussianSet.hpp  ManifestStore.hpp  ResourceManager.cpp  ResourceManager.hpp
src/projects/M_GStream/renderer/scene/: GaussianInstance.hpp  GaussianScene.hpp
src/projects/M_GStream/renderer/server/: CMakeLists.txt  CameraPoseAdapter.hpp  Config.hpp  JpegEncoder.cpp  MjpegStreamer.cpp  RemoteStreamServer.cpp  RemoteStreamServer.hpp  ServerProtocol.cpp  ServerProtocol.hpp
src/projects/M_GStream/renderer/server/examples/control_messages/: invalid_forward_up_near_parallel.json  invalid_forward_zero.json  invalid_missing_fovy.json  valid_set_camera_pose_default.json
src/projects/M_GStream/renderer/server/www/: README.md  app.js  index.html  styles.css
src/projects/M_GStream/renderer/subsystem/: Subsystem.hpp
src/projects/M_GStream/renderer/subsystem/rendering_system/: GaussianView.cpp  GaussianView.hpp  RenderGaussianInstance.cpp  RenderGaussianInstance.hpp  RenderGaussianScene.cpp  RenderGaussianScene.hpp  RenderingSystem.cpp  RenderingSystem.hpp  SwapManager.cpp  SwapManager.hpp  SwapPolicy.cpp  SwapPolicy.hpp
src/projects/M_GStream/renderer/subsystem/rendering_system/gpu_resource_manager/: GPUGaussianField.cpp  GPUGaussianField.hpp  GPUResourceManager.cpp  GPUResourceManager.hpp
src/projects/extended_gaussian/: CMakeLists.txt
src/projects/extended_gaussian/apps/: CMakeLists.txt
src/projects/extended_gaussian/apps/extended_gaussianViewer/: CMakeLists.txt  main.cpp
src/projects/extended_gaussian/renderer/: CMakeLists.txt  ExtendedGaussianViewer.cpp  ExtendedGaussianViewer.hpp
src/projects/extended_gaussian/renderer/cuda/: TransformKernels.cu
src/projects/extended_gaussian/renderer/resource/: GaussianField.hpp  GaussianLoader.cpp  GaussianLoader.hpp  GaussianSet.cpp  ManifestStore.cpp  ManifestStore.hpp  ResourceManager.cpp  ResourceManager.hpp
src/projects/extended_gaussian/renderer/scene/: GaussianInstance.cpp  GaussianInstance.hpp  GaussianScene.cpp  GaussianScene.hpp
src/projects/extended_gaussian/renderer/server/: CMakeLists.txt  CameraPoseAdapter.cpp  CameraPoseAdapter.hpp  Config.hpp  JpegEncoder.cpp  JpegEncoder.hpp  MjpegStreamer.cpp  MjpegStreamer.hpp  RemoteStreamServer.cpp  RemoteStreamServer.hpp  ServerProtocol.cpp  ServerProtocol.hpp
src/projects/extended_gaussian/renderer/server/examples/control_messages/: invalid_fovy_out_of_range.json  invalid_position_length.json  invalid_trailing_content.txt  valid_set_phase_default.json
src/projects/extended_gaussian/renderer/server/www/: README.md  app.js  index.html  styles.css
src/projects/extended_gaussian/renderer/subsystem/: Subsystem.hpp
src/projects/extended_gaussian/renderer/subsystem/rendering_system/: GaussianView.cpp  GaussianView.hpp  RenderGaussianInstance.cpp  RenderGaussianScene.cpp  RenderGaussianScene.hpp  RenderUtils.hpp  RenderingSystem.cpp  RenderingSystem.hpp  SwapManager.cpp  SwapManager.hpp  SwapPolicy.cpp  SwapPolicy.hpp
src/projects/extended_gaussian/renderer/subsystem/rendering_system/gpu_resource_manager/: GPUGaussianField.cpp  GPUGaussianField.hpp  GPUResourceManager.cpp  GPUResourceManager.hpp
(+31 files in other folders)
